Fix projects spacing

--- a/css/main.css
+++ b/css/main.css
@@ -948,6 +948,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 .green-section {
 	background: #84aa7b;
+	padding-bottom: 2.5rem;
 }
 .green-section p.lead {
 	color: #7d7d7d;
